SVGResources should use HashSet<AtomicString> instead of HashSet<AtomicStringImpl*> https://bugs.webkit.org/show_bug.cgi?id=98683

Reviewed by Darin Adler.

Eric's notes:

SVGResources should use HashSet<AtomicString> instead of HashSet<AtomicStringImpl*>
They do basically the same thing, and the former is much more common (and less code). It's
also safe, on the off-chance that we're using AtomicStrings which might otherwise go away.

No new tests, refactoring.

* rendering/svg/SVGResources.cpp:
(WebCore::clipperFilterMaskerTags):
(WebCore::markerTags):
(WebCore::fillAndStrokeTags):
(WebCore::chainableResourceTags):
(WebCore::SVGResources::buildCachedResources):


Canonical link: https://commits.webkit.org/116764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130780 268f45cc-cd09-0410-ab3c-d52691b4dbfc